kube/api/api-blue-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meal-tracker
      task: api
      role: blue
  template:
    metadata:
      labels:
        app: meal-tracker
        task: api
        role: blue
    spec:
      containers:
      - name: api
        image: normak458/meal-tracker_api:latest
        imagePullPolicy: Always #Always #IfNotPresent
        ports:
        - containerPort: 8081
      restartPolicy: Always
      volumes: null
