kube/api/api-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: http
    port: 8081
  selector:
    app: meal-tracker
    task: api
    role: blue

---
